# router/product.js
@@ -2,7 +2,7 @@ const product = require('../controller/productController')
 const express = require('express')
 const router = express.Router()
 const multer = require("multer");
-const bodyParser = require('body-parser')
+const restrict = require('../middleware/restrict')
 
 const uploadImage = multer({ storage: multer.diskStorage({
     destination: (req, file, cb) => {
@@ -24,15 +24,15 @@ const uploadImage = multer({ storage: multer.diskStorage({
 }})
 
 router.get('/products', product.getProduct)
-router.get('/product/user', product.getUserProduct)
+router.get('/product/user', restrict, product.getUserProduct)
 router.get('/product/:id', product.getProductId)
 // router.get('/addProduct', function(req, res) {
 //     res.render('views/uploadImage')
 // })
-router.post('/product', product.checkUser, bodyParser.json(), uploadImage.array('images-product', 5), product.postProduct)
-router.put('/product/:id', product.checkUser, uploadImage.array('images-product', 5), product.postProduct)
-router.post('/product/publish/:id', product.checkUser, product.publishProduct)
-router.post('/product/keep/:id', product.checkUser, product.keepProduct)
-router.delete('/product/:id', product.deleteProduct)
+router.post('/product', restrict, uploadImage.array('images-product', 5), product.postProduct)
+router.put('/product/:id', restrict, uploadImage.array('images-product', 5), product.putProduct)
+router.post('/product/publish/:id', restrict, product.publishProduct)
+router.post('/product/keep/:id', restrict, product.keepProduct)
+router.delete('/product/:id', restrict, product.deleteProduct)
 
 module.exports = router
